packages/next-swc/crates/core/tests/errors/next-font-downloaders/options-object/output.js
import '@next/google-fonts?{"font":"ABeeZee"}';
import a from '@next/google-fonts?{"font":"ABeeZee"}';
import '@next/google-fonts?{"font":"ABeeZee"}';
import a from '@next/google-fonts?{"font":"ABeeZee"}';
import '@next/google-fonts?{"font":"ABeeZee"}';
import a from '@next/google-fonts?{"font":"ABeeZee"}';
import '@next/google-fonts?{"font":"ABeeZee"}';
import a from '@next/google-fonts?{"font":"ABeeZee"}';
import '@next/google-fonts?{"font":"ABeeZee"}';
import a from '@next/google-fonts?{"font":"ABeeZee"}';
import '@next/google-fonts?{"font":"ABeeZee"}';
import a from '@next/google-fonts?{"font":"ABeeZee"}';
import '@next/google-fonts?{"font":"ABeeZee"}';
import a from '@next/google-fonts?{"font":"ABeeZee"}';
fn({
    ['variant']: '400'
});
const a = fn({
    10: 'hello'
});
fn({
    variant: [
        ...[],
        'hello'
    ]
});
const a = fn({
    variant: [
        ...[],
        'hello'
    ]
});
fn({
    variant: [
        function() {}
    ]
});
const a = fn({
    variant: [
        i1
    ]
});
fn({
    variant: [
        ,
        ''
    ]
});
const a = fn({
    variant: [
        ,
        ''
    ]
});
fn({
    variant: i1
});
const a = fn({
    variant: ()=>{}
});
fn({
    variant () {}
});
const a = fn({
    variant () {}
});
fn({
    ...{}
});
const a = fn({
    ...{}
});
